img fix on mobile

--- a/bioSite/styles.css
+++ b/bioSite/styles.css
@@ -170,6 +170,7 @@ footer {
     }
     #images .container img {
         width: 100%;
+        max-width: 100%
     }
     footer {
         font-size: 1rem;
